tests/coverage/misc/fail/negative/regex_literals/005_invalid_unicode_escape.js
// Expected error: malformed character class.
const r = /[a-z/
